# FastApiBaseProject

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/item/: controller.py  router.py
app/models/: item.py
app/product/: controller.py  router.py  schema.py
tests/: conftest.py
tests/item/: test_controller.py  test_router.py
tests/product/: test_controller.py  test_router.py
